# lps22hh-rs

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
bsp/: Cargo.toml  README.md
bsp/src/: main.rs
bsp/src/examples/: fifo_irq.rs  read_irq.rs  read_polling.rs
examples/read_data_drdy_stm32f401re/: Cargo.toml  README.md
examples/read_data_drdy_stm32f401re/src/: main.rs
examples/read_data_drdy_stm32f401re_embassy/: Cargo.toml  README.md
examples/read_data_drdy_stm32f401re_embassy/src/: main.rs
examples/read_data_polling_stm32f401re/: Cargo.toml  README.md
examples/read_data_polling_stm32f401re/src/: main.rs
examples/read_data_polling_stm32f401re_embassy/: Cargo.toml  README.md
examples/read_data_polling_stm32f401re_embassy/src/: main.rs
examples/read_fifo_irq_stm32f401re/: Cargo.toml  README.md
examples/read_fifo_irq_stm32f401re/src/: main.rs
examples/read_fifo_irq_stm32f401re_embassy/: Cargo.toml  README.md
examples/read_fifo_irq_stm32f401re_embassy/src/: main.rs
src/: driver.rs  lib.rs  prelude.rs
src/register/: main.rs
